; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_wcs_to_mbs.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_wcs_to_mbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_wcs_to_mbs(i32* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %47

14:                                               ; preds = %4
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i64, i64* %9, align 8
  %19 = sub i64 %18, 1
  br label %24

20:                                               ; preds = %14
  %21 = load i32*, i32** %6, align 8
  %22 = load i64, i64* %7, align 8
  %23 = call i64 @wcstombs(i8* null, i32* %21, i64 %22)
  br label %24

24:                                               ; preds = %20, %17
  %25 = phi i64 [ %19, %17 ], [ %23, %20 ]
  store i64 %25, i64* %10, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %45

28:                                               ; preds = %24
  %29 = load i64, i64* %9, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %28
  store i64 0, i64* %5, align 8
  br label %47

32:                                               ; preds = %28
  %33 = load i64, i64* %10, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %32
  %36 = load i8*, i8** %8, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = load i64, i64* %10, align 8
  %39 = add i64 %38, 1
  %40 = call i64 @wcstombs(i8* %36, i32* %37, i64 %39)
  store i64 %40, i64* %10, align 8
  br label %41

41:                                               ; preds = %35, %32
  %42 = load i8*, i8** %8, align 8
  %43 = load i64, i64* %10, align 8
  %44 = getelementptr inbounds i8, i8* %42, i64 %43
  store i8 0, i8* %44, align 1
  br label %45

45:                                               ; preds = %41, %24
  %46 = load i64, i64* %10, align 8
  store i64 %46, i64* %5, align 8
  br label %47

47:                                               ; preds = %45, %31, %13
  %48 = load i64, i64* %5, align 8
  ret i64 %48
}

declare dso_local i64 @wcstombs(i8*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
